[project]
name = "friday-night-at-the-er-optimizer"
version = "0.1.0"
description = "Streamlit optimization assistant for Friday Night at the ER game."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pulp>=2.9.0",
  "streamlit>=1.42.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"
